--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         <div class="cast">
             <h4>Cast</h4>
             <ul>
-                <li><img src="/img/1.jpg"></li>
-                <li><img src="/img/2.jpg"></li>
-                <li><img src="/img/3.jpg"></li>
-                <li><img src="/img/4.jpg"></li>
-                <li><img src="/img/5.jpg"></li>
-                <li><img src="/img/6.jpg"></li>
-                <li><img src="/img/7.jpg"></li>
-                <li><img src="/img/8.jpg"></li>
+                <li><img src="./img/1.jpg"></li>
+                <li><img src="./img/2.jpg"></li>
+                <li><img src="./img/3.jpg"></li>
+                <li><img src="./img/4.jpg"></li>
+                <li><img src="./img/5.jpg"></li>
+                <li><img src="./img/6.jpg"></li>
+                <li><img src="./img/7.jpg"></li>
+                <li><img src="./img/8.jpg"></li>
 
             </ul>
         </div>
