--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <div class="card">
         <div class="poster">
-        <img src="/img/bg.jpg" id="imagem-poster">
+        <img src="./img/bg.jpg" id="imagem-poster">
         </div>
     <div class="detalhes">
-        <img src="/img/66727.png" id="logo">
+        <img src="./img/66727.png" id="logo">
         <h3>Directed by: Brian De Palma</h3>
         <div class="rating">
             <i class="fa-solid fa-star"></i>
